tests/toylang/neg/000281_mutation.toylang
program a = { else var a : bool; } .
